// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <div
        class="ms-TooltipHost insightsTooltipHost root-109"
        role="none"
      >
        <a
          class="ms-Link insights-link insightsLink root-110"
          href="test-url"
          target="_blank"
        >
          More information about some-rule
        </a>
        <div
          hidden=""
          id="tooltip1"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        />
      </div>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links=""
      />
      <mock-guidancetags
        deps="[object Object]"
        links=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": [],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": [],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <div
        class="ms-TooltipHost insightsTooltipHost root-109"
        role="none"
      >
        <a
          class="ms-Link insights-link insightsLink root-110"
          href="test-url"
          target="_blank"
        >
          More information about some-rule
        </a>
        <div
          hidden=""
          id="tooltip0"
          style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
        />
      </div>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links="[object Object]"
      />
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
} 1`] = `<DocumentFragment />`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceLinks props 1`] = `undefined`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ [length]: 0 ],
  linkComponent: 'ExternalLink'
}: GuidanceTags props 1`] = `undefined`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
} 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks
        links="[object Object]"
      />
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
}: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with {
  url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ],
  linkComponent: 'NewTabLink'
}: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": [
    {
      "href": "test-href",
    },
  ],
}
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' } 1`] = `
<DocumentFragment>
  <div
    class="ruleMoreResources"
  >
    <div
      class="moreResourcesTitle"
    >
      Resources for this rule
    </div>
    <span
      class="ruleDetailsId"
    >
      <a
        class="ms-Link insights-link root-110"
        href="test-url"
        target="_blank"
      >
        More information about some-rule
      </a>
    </span>
    <span
      class="ruleGuidance"
    >
      <mock-guidancelinks />
      <mock-guidancetags
        deps="[object Object]"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "links": null,
}
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
  },
  "links": null,
}
`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' } 1`] = `<DocumentFragment />`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceLinks props 1`] = `undefined`;

exports[`RuleResources renders with { url: null, guidanceLinks: null, linkComponent: 'NewTabLink' }: GuidanceTags props 1`] = `undefined`;
